feat (app) : finished princip of the game

--- a/index.html
+++ b/index.html
@@ -47,22 +47,22 @@
 			</header>
 			<main>
 				<div class="container">
-					<button class="memory-btn card-back">1</button>
-					<button class="memory-btn card-back">2</button>
-					<button class="memory-btn card-back">3</button>
-					<button class="memory-btn card-back">4</button>
-					<button class="memory-btn card-back">5</button>
-					<button class="memory-btn card-back">6</button>
-					<button class="memory-btn card-back">7</button>
-					<button class="memory-btn card-back">8</button>
-					<button class="memory-btn card-back">1</button>
-					<button class="memory-btn card-back">2</button>
-					<button class="memory-btn card-back">3</button>
-					<button class="memory-btn card-back">4</button>
-					<button class="memory-btn card-back">5</button>
-					<button class="memory-btn card-back">6</button>
-					<button class="memory-btn card-back">7</button>
-					<button class="memory-btn card-back">8</button>
+					<button class="memory-btn card-back" data-number="1">1</button>
+					<button class="memory-btn card-back" data-number="2">2</button>
+					<button class="memory-btn card-back" data-number="3">3</button>
+					<button class="memory-btn card-back" data-number="4">4</button>
+					<button class="memory-btn card-back" data-number="5">5</button>
+					<button class="memory-btn card-back" data-number="6">6</button>
+					<button class="memory-btn card-back" data-number="7">7</button>
+					<button class="memory-btn card-back" data-number="8">8</button>
+					<button class="memory-btn card-back" data-number="1">1</button>
+					<button class="memory-btn card-back" data-number="2">2</button>
+					<button class="memory-btn card-back" data-number="3">3</button>
+					<button class="memory-btn card-back" data-number="4">4</button>
+					<button class="memory-btn card-back" data-number="5">5</button>
+					<button class="memory-btn card-back" data-number="6">6</button>
+					<button class="memory-btn card-back" data-number="7">7</button>
+					<button class="memory-btn card-back" data-number="8">8</button>
 				</div>
 			</main>
 			<footer>
