feat (app) : commit

--- a/index.html
+++ b/index.html
@@ -85,6 +85,16 @@
 						<p class="score" id="score-four">0</p>
 					</div>
 				</div>
+				<div class="footer-row-solo">
+					<div class="player-div-solo">
+						<p class="times">Time</p>
+						<span class="span-times" id="span-times">0:0</span>
+					</div>
+					<div class="player-div-solo">
+						<p class="moves">Moves</p>
+						<span class="span-moves" id="span-moves">0</span>
+					</div>
+				</div>
 			</footer>
 		</div>
 		<section class="win-sect" id="win-sect">
@@ -110,6 +120,24 @@
 			</div>
 			<div class="btn-win-div">
 				<button class="restart-win" id="restart-win">Restart</button>
+				<button class="new-game-win">Setup New Game</button>
+			</div>
+		</section>
+		<section class="win-sect-solo" id="win-sect-solo">
+			<p class="youdid">You did it!</p>
+			<p class="game-over">Game over! Here’s how you got on…</p>
+			<div class="classement">
+				<div class="player-classement">
+					<span class="player-span">Time Elapsed</span>
+					<span class="span-times">0:0</span>
+				</div>
+				<div class="player-classement">
+					<span class="player-span">Moves Taken</span>
+					<p class="paire-para"><span class="span-moves">0</span> Moves</p>
+				</div>
+			</div>
+			<div class="btn-win-div">
+				<button class="restart-win" id="restart-win-solo">Restart</button>
 				<button class="new-game-win">Setup New Game</button>
 			</div>
 		</section>
